Fri Jan 10 00:47:52 2014  Josef Stribny  <strzibny@gmail.com>

	* ext/tk/extconf.rb: fix to pass arrays instead of strings to
	  libpathflag.  patch at [ruby-core:59665].  [Bug #9386]

Thu Jan  9 20:49:22 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: -mstackrealign is necessary for -msse2 working.
	  [ruby-core:54716] [Bug #8349]

	* configure.in: use SSE2 instructions to drop unexpected precisions on
	  other than mingw.  [ruby-core:59472] [Bug #8358]

Thu Jan  9 20:31:10 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* hash.c (rb_objid_hash): should return `long'.  brushup r44534.

	* object.c (rb_obj_hash): follow above change.

Thu Jan  9 19:12:37 2014  Koichi Sasada  <ko1@atdot.net>

	* vm.c (rb_vm_pop_cfunc_frame): added.  It cares c_return event.
	  The patch base by drkaes (Stefan Kaes).
	  [Bug #9321]

	* variable.c (rb_mod_const_missing): use rb_vm_pop_cfunc_frame()
	  instead of rb_frame_pop().

	* vm_eval.c (raise_method_missing): ditto.

	* vm_eval.c (rb_iterate): ditto.

	* internal.h (rb_vm_pop_cfunc_frame): add decl.

	* test/ruby/test_settracefunc.rb: add tests.
	  provided by drkaes (Stefan Kaes).

	* vm.c, eval.c, include/ruby/intern.h (rb_frame_pop):
	  move definition of rb_frame_pop() and deprecate it.
	  It doesn't care about `return' events.

Thu Jan  9 17:40:28 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* hash.c (rb_any_hash): should treat the return value of rb_objid_hash()
	  as `long', because ruby assumes the hash value of the object id of
	  an object is `long'.
	  this fixes test failures on mswin64 introduced at r44525.

Thu Jan  9 09:55:20 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: dumping strings with
	  quotes should not have changed.  [ruby-core:59316] [Bug #9300]

	* ext/psych/lib/psych.rb: fixed missing require.

	* test/psych/test_string.rb: test

Thu Jan  9 09:51:00 2014  Aaron Patterson <aaron@tenderlovemaking.com>
